--- a/QLY_KS/QLY_KS.csproj
+++ b/QLY_KS/QLY_KS.csproj
@@ -43,9 +43,7 @@
     <Reference Include="DevExpress.XtraBars.v16.2" />
     <Reference Include="DevExpress.Sparkline.v16.2.Core" />
     <Reference Include="DevExpress.XtraEditors.v16.2" />
-    <Reference Include="DevExpress.XtraGrid.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraLayout.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
-    <Reference Include="DevExpress.XtraPrinting.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -94,12 +92,6 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="fUpdateAccount.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="fUpdateAccount.Designer.cs">
-      <DependentUpon>fUpdateAccount.cs</DependentUpon>
-    </Compile>
     <Compile Include="Hoadon.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,9 +123,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="fUpdateAccount.resx">
-      <DependentUpon>fUpdateAccount.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Hoadon.resx">
       <DependentUpon>Hoadon.cs</DependentUpon>
@@ -199,17 +188,14 @@
     <None Include="Resources\imgLG.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BUS\BUS.csproj">
-      <Project>{9F25B3CF-4AC2-4F8E-8D25-7C646201230C}</Project>
-      <Name>BUS</Name>
-    </ProjectReference>
     <ProjectReference Include="..\DATA\DAO.csproj">
-      <Project>{ADE5F172-0971-49E3-9628-6D3F584BE57A}</Project>
+      <Project>{ade5f172-0971-49e3-9628-6d3f584be57a}</Project>
       <Name>DAO</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Office-Customer-Male-Light-icon.png" />
+    <ProjectReference Include="..\DTO\DTO.csproj">
+      <Project>{cf69e04c-2e7c-4c5b-b465-cde074a28736}</Project>
+      <Name>DTO</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
